@startuml reinoEncantado
skinparam classAttributeIconSize 0

class Jugador{
- nivelExperiencia: int
- heroe: Heroe
- ubicacion: Ubicacion
- recompensas: List<Recompensa>
+ mejorarPersonaje(): boolean
+ recolectarRecompensa()
}

abstract class Personaje{
- nombre: String
- vida: int
- nivelAtaque: int
- nivelDefensa: int
+ mejorarAtaque(cantidad: int): boolean
+ mejorarDefensa(cantidad: int): boolean
+ estaVivo(): boolean
+ usarHabilidadEspecialAtaque(personaje: Personaje, cantGolpes int): int
+ usarHabilidadEspecialDefensa(personaje: Personaje, cantGolpes int): int
}

abstract class Heroe{
- duenio : Jugador
+ ganoPelea(criatura: Criatura): void
}

abstract class Criatura{
- nivel: int
}

class Mago{
+ ganoPelea(criatura: Criatura): void
+ usarHabilidadEspecialAtaque(...): int
+ usarHabilidadEspecialDefensa(...): int
}

class Guerrero{
+ ganoPelea(criatura: Criatura): void
+ usarHabilidadEspecialAtaque(...): int
+ usarHabilidadEspecialDefensa(...): int
}

class Arquero{
- punteria: int
- agilidad: int
+ ganoPelea(criatura: Criatura): void
+ usarHabilidadEspecialAtaque(...): int
+ usarHabilidadEspecialDefensa(...): int
}

class Dragon{
+ usarHabilidadEspecialAtaque(...): int
+ usarHabilidadEspecialDefensa(...): int
}

class Troll{
+ usarHabilidadEspecialAtaque(...): int
+ usarHabilidadEspecialDefensa(...): int
}

class Espectro{
+ usarHabilidadEspecialAtaque(...): int
+ usarHabilidadEspecialDefensa(...): int
}

class Pelea{
-heroe: Heroe
-criatura: Criatura
+ iniciarPelea(): boolean
+ turnoHeroe(cantGolpes: int): boolean
+ turnoCriatura(cantGolpes: int): boolean
+ atacar(atacante: Personaje, defensor: Personaje, cantGolpes: int): void
}

class Mapa{
- ubicaciones: List<Ubicacion>
}

class Ubicacion{
- nombre: String
- adyacentes: List<Ubicacion>
- enemigos: Criatura
- tesoro: Tesoro
- recompensa: Recompensa
+ ubicacionNeutral(): boolean
}

class Recompensa {
- descripcion: String
- premio: String
- cantidadDefensa: int
- porcentajeDefensa: float
- cantidadAtaque: int
- porcentajeAtaque: float
}

class Tesoro{
- nombre: String
+ devolverDescripcion(): String
}

class JuegoReino {
- instancia: getInstancia()
- mapa: Mapa
- jugador: Jugador
+ iniciarJuego()
+ getInstancia(): JuegoReinio
+ viajaraUbicacion(destino: Ubicacion): void
+ mejorarAtaqueHeroe(jugador: Jugador, cantidad: int): boolean
+ mejorarDefensaHeroe(jugador: Jugador, cantidad: int): boolean
+ recolectarRecompensa(jugador: Jugador): void
}


Jugador "1" *--- "1" Heroe: controla
Personaje <|-- Heroe
Personaje <|-- Criatura
Heroe <|-- Arquero
Heroe <|-- Mago
Heroe <|-- Guerrero
Criatura <|-- Dragon
Criatura <|-- Troll
Criatura <|-- Espectro
Heroe <-> Pelea: Lucha
Pelea <-> Criatura: Lucha
Mapa <-- Jugador: Acceso a Ubicaciones
Jugador "1" -> "1" Ubicacion: Se encuentra
Mapa "1" *- "1..*" Ubicacion: contiene
Ubicacion "1" o--- "0..1" Criatura: contiene
Ubicacion "1" *- "0..1" Tesoro: contiene
Ubicacion "1" *- "0..1" Recompensa: contiene
Jugador "1" o-- "*" Recompensa: contiene
JuegoReino "1" *-- "1" Jugador: controla acciones
JuegoReino "1" *-- "1" Mapa: administra ubicaciones

@enduml